ScryingOrb: add special cursor; improve dialogues
* ScryingOrb/CursorEditor.cs:
  - Add an AssetEditor subclass to apply the cursor when an orb is
    illuminated.

* ScryingOrb/Experience.cs:
  - Log exceptions from trying experiences as warnings.
  - Track how many orbs are illuminated for use by CursorEditor.
  - Slow down the illumination pulsing animation slightly.

* ScryingOrb/Experiences/UnlimitedExperience.cs:
  - Show a special message on the last day of an unlimited period.

* ScryingOrb/ModEntry.cs:
  - Config: Make internal static to match PublicAccessTV.
  - OrbsIlluminated: Add property to track this count and control
    CursorEditor.
  - cursorEditor: Add field to manage the CursorEditor.
  - OrbTestKit: Add items in correct (reverse) order. Log when done.

* ScryingOrb/assets/cursor.png:
  - Add a rotated version of Abby's Planchette as the cursor.

* ScryingOrb/i18n/default.json:
  - unlimited.lastDay: Add special message for last day of unlimited
    period.
  - *.opening: Describe the offering with an appropriate adjective.
  - *.leave: Expand to fit with the orb's voice.
  - Miscellaneous changes to improve variety and voice consistency.

* ScryingOrb/ScryingOrb.csproj:
  - Include CursorEditor and cursor.png.

* PredictiveCore/Garbage.cs:
* PredictiveCore/Geodes.cs:
* PredictiveCore/Movies.cs:
* PredictiveCore/NightEvents.cs:
* PredictiveCore/Trains.cs:
* PublicAccessTV/ModEntry.cs:
* ScryingOrb/ModEntry.cs:
  - Fix LogLevel usage.

* PublicAccessTV/Channels/MoviesChannel.cs:
* ScryingOrb/Experiences/GarbageExperience.cs:
* ScryingOrb/Experiences/GeodesExperience.cs:
* ScryingOrb/Experiences/NightEventsExperience.cs:
  - Linting.

--- a/ScryingOrb/i18n/default.json
+++ b/ScryingOrb/i18n/default.json
@@ -1,6 +1,7 @@
 ﻿{
   "unlimited.initial": "The spirits are most pleased by your generous offering. You may seek their counsel as much as you desire for the next week.",
   "unlimited.following": "The orb glows bright with the power of your earlier offering.",
+  "unlimited.lastDay": "The orb glows faintly as your earlier offering wanes.",
   "unlimited.experience.question": "What wisdom do you seek from the spirits?",
   "unlimited.experience.mining": "Mines and caverns",
   "unlimited.experience.geodes": "Geode treasures",
@@ -8,14 +9,14 @@
   "unlimited.experience.shopping": "Market offerings",
   "unlimited.experience.garbage": "Garbage finds",
   "unlimited.experience.itemFinder": "Seek a particular item",
-  "unlimited.experience.leave": "(Leave)",
+  "unlimited.experience.leave": "(Leave their counsel unheeded)",
 
   "nothing.message": "The spirits wait patiently for an offering.",
 
   "luckyPurple.initial": "The spirits are not amused.^The orb is not an underwear drawer!^Do not try that again.",
   "luckyPurple.following": "The orb seems to peer back at you reproachfully.",
 
-  "geodes.opening": "The spirits of the crystal spires accept your offering.",
+  "geodes.opening": "The spirits of the crystal spires accept your stony offering.",
   "geodes.type.question": "Which strange rocks do you wish to peek inside?",
   "geodes.type.any": "Next three geodes of any type",
   "geodes.type.Regular": "Next 10 Geodes",
@@ -23,7 +24,7 @@
   "geodes.type.Magma": "Next 10 Magma Geodes",
   "geodes.type.Omni": "Next 10 Omni Geodes",
   "geodes.type.Trove": "Next 10 Artifact Troves",
-  "geodes.type.leave": "(Leave)",
+  "geodes.type.leave": "(Leave these stones unturned)",
   "geodes.header.any1": "The very next geode shall contain:^",
   "geodes.header.any2": "The following geode will provide:^",
   "geodes.header.any3": "The third next geode promises to reveal:^",
@@ -33,26 +34,26 @@
   "geodes.header.Omni": "If they be Omni Geodes, the next 10 geodes^cracked are sure to offer:^",
   "geodes.header.Trove": "If they be Artifact Troves, the next 10 geodes^cracked shall manifest:^",
   "geodes.footer": "^^$ treasures are deemed more valuable by mortals.^= treasures are sought by another in your village.",
-  "geodes.closing.progress": "Your journey to the depths of the mines is^incomplete, young one. Should you explore further,^these rocks may reveal different, greater treasures.",
+  "geodes.closing.progress": "Your journey to the depths of the mines is^incomplete, child. Should you explore further,^these rocks may reveal different, greater treasures.",
 
-  "nightEvents.opening": "The spirits of darkest night accept your offering.",
+  "nightEvents.opening": "The spirits of the darkest night accept your arcane offering.",
   "nightEvents.type.question": "What nocturnal occurrences do you wish to scry?",
   "nightEvents.type.any": "Any imminent occurrences",
-  "nightEvents.type.Fairy": "Visits from fairies",
-  "nightEvents.type.Witch": "Flyovers by witches",
+  "nightEvents.type.Fairy": "Visits from fae folk",
+  "nightEvents.type.Witch": "Flyovers by sorceresses",
   "nightEvents.type.Meteorite": "Rocks raining from the heavens",
   "nightEvents.type.StrangeCapsule": "Visitors from other worlds",
   "nightEvents.type.StoneOwl": "Petrification of birds",
-  "nightEvents.type.leave": "(Leave)",
+  "nightEvents.type.leave": "(Leave these happenings mysterious)",
   "nightEvents.prediction.Earthquake": "> An earthquake may shake your town^  on {{date}}.",
   "nightEvents.prediction.Fairy": "> A fairy may visit your farm^  on {{date}}.",
   "nightEvents.prediction.Witch": "> A witch may fly over your farm^  on {{date}}.",
   "nightEvents.prediction.Meteorite": "> A meteor may fall from the sky^  on {{date}}.",
   "nightEvents.prediction.StrangeCapsule": "> An extraterrestrial may crash on your planet^  on {{date}}.",
-  "nightEvents.prediction.StoneOwl": "> A bird may be petrified on your farm^  on {{date}}.",
+  "nightEvents.prediction.StoneOwl": "> A bird may turn to stone on your farm^  on {{date}}.",
   "nightEvents.closing": "Know that the beings of shadow are capricious.^No occurrence can be foreseen with certainty.",
 
-  "garbage.opening": "The spirits of the desolate wastes accept your offering.",
+  "garbage.opening": "The spirits of the desolate wastes accept your foul offering.",
   "garbage.none.today": "No garbage reveals itself today.",
   "garbage.none.later": "The cans are portented to be empty on {{date}}.",
   "garbage.header.today": "On this day:",
@@ -62,12 +63,12 @@
   "garbage.prediction.HaleyHouse": "> Two sisters will throw away {{itemName}}.",
   "garbage.prediction.ManorHouse": "> A longtime leader will dispense with {{itemName}}.",
   "garbage.prediction.ArchaeologyHouse": "> A man of the book will discard {{itemName}}.",
-  "garbage.prediction.Blacksmith": "> From a firey forge will be slagged {{itemName}}.",
+  "garbage.prediction.Blacksmith": "> From a fiery forge will be slagged {{itemName}}.",
   "garbage.prediction.Saloon": "> A warm inn full of friends will toss {{itemName}}.",
   "garbage.prediction.JoshHouse": "> The elders of the town will lay aside {{itemName}}.",
   "garbage.prediction.JojaMart": "> A corporate behemoth will dump {{itemName}}.",
   "garbage.prediction.MovieTheater": "> A house of illusions will scrap {{itemName}}.",
   "garbage.closing.progress": "You have not yet probed through much waste,^young one. Should you gain more experience^by then, you may well find more in the cans.",
 
-  "fallback.message": "The spirits do not recognize your offering.",
+  "fallback.message": "The spirits do not recognize your strange offering.",
 }
