--- a/ScryingOrb/i18n/default.json
+++ b/ScryingOrb/i18n/default.json
@@ -25,14 +25,14 @@
   "geodes.type.Omni": "Next 10 Omni Geodes",
   "geodes.type.Trove": "Next 10 Artifact Troves",
   "geodes.type.leave": "(Leave these stones unturned)",
-  "geodes.header.any1": "The very next geode shall contain:^",
-  "geodes.header.any2": "The following geode will provide:^",
-  "geodes.header.any3": "The third next geode promises to reveal:^",
+  "geodes.header.any1": "The very next geode cracked shall contain:^",
+  "geodes.header.any2": "The following geode opened will provide:^",
+  "geodes.header.any3": "The third next geode rived promises to reveal:^",
   "geodes.header.Regular": "If they be regular Geodes, the next 10 geodes^cracked shall contain:^",
-  "geodes.header.Frozen": "If they be Frozen Geodes, the next 10 geodes^cracked will provide:^",
-  "geodes.header.Magma": "If they be Magma Geodes, the next 10 geodes^cracked promise to reveal:^",
-  "geodes.header.Omni": "If they be Omni Geodes, the next 10 geodes^cracked are sure to offer:^",
-  "geodes.header.Trove": "If they be Artifact Troves, the next 10 geodes^cracked shall manifest:^",
+  "geodes.header.Frozen": "If they be Frozen Geodes, the next 10 geodes^opened will provide:^",
+  "geodes.header.Magma": "If they be Magma Geodes, the next 10 geodes^rived promise to reveal:^",
+  "geodes.header.Omni": "If they be Omni Geodes, the next 10 geodes^split are sure to offer:^",
+  "geodes.header.Trove": "If they be Artifact Troves, the next 10 geodes^shattered shall manifest:^",
   "geodes.footer": "^^$ treasures are deemed more valuable by mortals.^= treasures are sought by another in your village.",
   "geodes.closing.progress": "Your journey to the depths of the mines is^incomplete, child. Should you explore further,^these rocks may reveal different, greater treasures.",
 
@@ -70,5 +70,5 @@
   "garbage.prediction.MovieTheater": "> A house of illusions will scrap {{itemName}}.",
   "garbage.closing.progress": "You have not yet probed through much waste,^young one. Should you gain more experience^by then, you may well find more in the cans.",
 
-  "fallback.message": "The spirits do not recognize your strange offering.",
+  "fallback.message": "The spirits do not recognize your strange offering."
 }
