ScryingOrb: implement mystical date picker
* ScryingOrb/DatePicker.cs:
  - Add IClickableMenu implementation for a mystical
    date picker with suitable decorations and Easter eggs.

* ScryingOrb/Experiences/GarbageExperience.cs:
  - Use the DatePicker with an appropriate question.
  - Fix a missed token definition.

* ScryingOrb/ModEntry.cs:
  - Add test_date_picker console command.
  - Rename orb_test_kit console command to
    test_scrying_orb.

* ScryingOrb/assets/calendar.png:
* ScryingOrb/assets/calendar.svg:
* ScryingOrb/assets/dayButton.png:
* ScryingOrb/assets/dayButton.xcf:
  - Add assets for date picker with their working files.

* ScryingOrb/i18n/default.json:
  - datePicker.*: Add strings for date picker.
  - garbage.date.question: Add.

* ScryingOrb/ScryingOrb.csproj:
  - Include new files.

* PredictiveCore/Utilities.cs:
* PublicAccessTV/Channels/MoviesChannel.cs:
* PublicAccessTV/i18n/default.json:
  - Refactor to rely more on base game date methods.

* PredictiveCore/PredictiveCore.projitems:
  - Remove .svg working files as well as .xcf.
  - Log working file removals.

* ScryingOrb/[JA]ScryingOrb/BigCraftables/ScryingOrb/big-craftable.json:
* ScryingOrb/[MFM]ScryingOrb/mail.json
* ScryingOrb/[MFM]ScryingOrb/i18n/default.json:
  - Refactoring.

* ROADMAP:
  - Remove implemented item.

--- a/ScryingOrb/i18n/default.json
+++ b/ScryingOrb/i18n/default.json
@@ -1,4 +1,8 @@
 ﻿{
+  "datePicker.prevLabel": "Previous Day",
+  "datePicker.nextLabel": "Next Day",
+  "datePicker.scryLabel": "Scry This Day",
+
   "unlimited.initial": "The spirits are most pleased by your generous offering. You may seek their counsel as much as you desire for the next week.",
   "unlimited.following": "The orb glows bright with the power of your earlier offering.",
   "unlimited.lastDay": "The orb glows faintly as your earlier offering wanes.",
@@ -54,6 +58,7 @@
   "nightEvents.closing": "Know that the beings of shadow are capricious.^No occurrence can be foreseen with certainty.",
 
   "garbage.opening": "The spirits of the desolate wastes accept your foul offering.",
+  "garbage.date.question": "What day's refuse do you wish to foretell?",
   "garbage.none.today": "No garbage reveals itself today.",
   "garbage.none.later": "The cans are portented to be empty on {{date}}.",
   "garbage.header.today": "On this day:",
