--- a/PublicAccessTV/i18n/default.json
+++ b/PublicAccessTV/i18n/default.json
@@ -48,7 +48,7 @@
   "trains.opening": "Greetings, neighbors! Demetrius here to keep you apprised of the happenings up at the railroad.",
   "trains.next.today": "There's a train coming today! Grab your cameras and head north, railfans. The train will be here at {{time}}.",
   "trains.next.thisWeek": "We don't have long to wait. This {{dayOfWeek}}, a train will pass through at {{time}}.",
-  "trains.next.later": "Sorry, the next train won't pass through until {{date}} at {{time}}. We have to be patient.",
-  "trains.later": "Looking further down the schedule, I see that trains are also scheduled to pass through on {{date1}} and {{date2}}.",
+  "trains.next.later": "Sorry, the next train won't pass through until {{date}}, at {{time}}. We have to be patient.",
+  "trains.later": "Looking further down the schedule, I see that trains are also scheduled to pass through on {{date1}}, and {{date2}}.",
   "trains.closing": "Remember that you'll probably miss the train if you've been away from the valley overnight. Happy trainspotting!"
 }
