--- a/ScryingOrb/i18n/default.json
+++ b/ScryingOrb/i18n/default.json
@@ -17,8 +17,11 @@
 
   "nothing.message": "The spirits wait patiently for an offering.",
 
-  "luckyPurple.initial": "The spirits are not amused.^The orb is not an underwear drawer!^Do not try that again.",
-  "luckyPurple.following": "The orb seems to peer back at you reproachfully.",
+  "luckyPurple.initial": "The orb seems to peer back at you reproachfully.^Do not try that again.",
+  "luckyPurple.following": "The spirits are not amused.^The orb is not an underwear drawer!^Today will not be your lucky day.",
+
+  "meta.initial": "The spirits heard you like scrying, so they'll let you put a Scrying Orb on your Scrying Orb so you can scry while you scry.",
+  "meta.following": "Nothing happens, but you feel a strange sense of looking in on yourself from the outside.",
 
   "geodes.opening": "The spirits of the crystal spires accept your stony offering.",
   "geodes.type.question": "Which strange rocks do you wish to peek inside?",
