Add mining channel/experience; TV sound/music; misc. fixes
* PredictiveCore/Mining.cs:
  - Add class to predict mining conditions

* PredictiveCore/Movies.cs:
  - IsAvailable: Check theater presence properly against farmer,
    not current player.

* PredictiveCore/Utilities.cs:
  - AnyoneHasFriendship: Remove disused method.
  - Initialize: Include Mining.

* PredictiveCore/PredictiveCore.projitems:
  - Include Mining.cs.

* PublicAccessTV/Channels/MiningChannel.cs:
  - Add "Mining Advisory" channel hosted by Marlon and Gil.

* PublicAccessTV/Channels/GarbageChannel.cs:
  - IsAvailable: Check friendship for current player only.
  - Show: Add music.

* PublicAccessTV/Channels/MoviesChannel.cs:
  - Show: Add music/sounds.

* PublicAccessTV/Channels/NightEventsChannel.cs:
  - Show: Add opening sounds.
  - Show: Use special background and sound for the
    StrangeCapsule reaction.

* PublicAccessTV/Channels/TrainsChannel.cs:
  - Show: Add opening/closing jingles and train sounds.
  - Show: Use variant background for rain/night.

* PublicAccessTV/Channel.cs:
  - Scene: Remove; now a class in a separate file.
  - QueueScene: Take an already-constructed Scene object.
  - RunProgram: Make public (for Scene) and remove parts now
    handled by Scene.
  - LoadBackground: Add convenience method.

* PublicAccessTV/Scene.cs:
  - Add class, replacing struct in Channel.cs.
  - Add support for built-in sounds/music and custom sounds.

* PublicAccessTV/ModEntry.cs:
  - Include MiningChannel.

* PublicAccessTV/i18n/default.json:
  - mining.*: Add strings for MiningChannel.
  - garbage.closing.progress: Make it Linusier.
  - nightEvents.StrangeCapsule.reaction: Tighten joke.

* PublicAccessTV/assets/mining_backgrounds.png:
* PublicAccessTV/assets/mining_backgrounds.xcf:
  - Add backgrounds for MiningChannel.

* PublicAccessTV/assets/nightEvents_backgrounds.png:
* PublicAccessTV/assets/nightEvents_backgrounds.xcf:
  - Rename from nightEvents_Background.*.
  - Add a freakishly colored 

--- a/PublicAccessTV/i18n/default.json
+++ b/PublicAccessTV/i18n/default.json
@@ -16,9 +16,21 @@
   "garbage.item.generic": "Just some {{itemName}} in here.",
   "garbage.dishOfTheDay": "a hot meal",
   "garbage.closing.standard": "I'll be back tomorrow with another look In the Cans. Let's keep this between you and me, okay?",
-  "garbage.closing.progress": "This is only what you're ready to find, young friend. Learn to listen to the cans and they'll have more to offer you.",
+  "garbage.closing.progress": "This is only what you're ready to find, young friend. Learn to listen to the cans and they'll have more to offer you. Go in peace.",
 
   "mining.title": "Mining Advisory",
+  "mining.opening": "Hey, adventurers. Gil and I have some news on what's in the mines today.",
+  "mining.floor": "floor {{num}}",
+  "mining.floors": "floors {{nums}} and {{lastNum}}",
+  "mining.prediction.Mushroom": "There's fungus among us! Our scouts spotted mushrooms poppin' up on {{floors}}.",
+  "mining.prediction.MonsterInfested": "Tracking heavy monster activity on {{floors}}. Arm yourself.",
+  "mining.prediction.SlimeInfested": "Slimes are infesting {{floors}}. Don't wear your good pants.",
+  "mining.prediction.Quarry": "On {{floors}} it's looking more like the quarry than the mines. Strange.",
+  "mining.prediction.QuarryInfested": "I hear there are flaming skulls all over {{floors}}. I'd stay away, myself.",
+  "mining.prediction.Treasure": "Seems there's some treasure waitin' down on {{floors}}. Wouldn't let it sit there if I were you...",
+  "mining.prediction.PepperRex": "Our friends out Castle Village way tell us they've seen packs of Pepper Rex on the move. You might find 'em on {{floors}} of the Skull Cavern.",
+  "mining.closing.standard": "That's all for now. Stay safe out there, folks.",
+  "mining.closing.progress": "We're keeping this simple for some of our newer members until they get farther down. Safe travels.",
 
   "movies.title": "Movie Sneak Preview",
   "movies.host.generic": "your friendly concessionaire",
@@ -34,7 +46,7 @@
   "nightEvents.Meteorite.reaction": "We urge you to remain indoors all night. The view can be enjoyed from your windows. Please report any meteorite impacts to your local authorities.",
   "nightEvents.Meteorite.closing": "I wish you all a safe and enjoyable evening.",
   "nightEvents.StrangeCapsule.opening": "Fellow citizens, rumors have been circulating about extraterrestrial activity in the skies over our region tonight.",
-  "nightEvents.StrangeCapsule.reaction": "I can assure you that this is nonsense. Aliens do not exist. You have not heard any rumors. I am one of you. Everything is fine. THE OFFSPRING ARE FINE.",
+  "nightEvents.StrangeCapsule.reaction": "I can assure you that this is nonsense. Aliens do not exist. They are not already among us. Everything is fine. THE OFFSPRING ARE WELL.",
   "nightEvents.StrangeCapsule.closing": "*ahem* I wish you all a normal and human evening.",
   "nightEvents.NewYear.opening": "Fellow citizens, we have come to the end of another successful year for our region and the entire Ferngill Republic.",
   "nightEvents.NewYear.reaction": "Congratulations to our industries on their ever-improving production, particularly the excellent crops from Stardew Valley.",
