--- a/ScryingOrb/i18n/default.json
+++ b/ScryingOrb/i18n/default.json
@@ -23,6 +23,21 @@
   "meta.initial": "The spirits heard you like scrying, so they'll let you put a Scrying Orb on your Scrying Orb so you can scry while you scry.",
   "meta.following": "Nothing happens, but you feel a strange sense of looking in on yourself from the outside.",
 
+  "mining.opening": "The spirits of the molten chasms accept your lustrous offering.",
+  "mining.date.question": "What day's conditions do you wish to presage?",
+  "mining.header.today": "On this day in the mines and caverns:",
+  "mining.header.later": "When in the overworld it shall be {{date}}:",
+  "mining.floor": "floor {{num}}",
+  "mining.floors": "floors {{nums}} and {{lastNum}}",
+  "mining.prediction.Mushroom": "> Mushrooms will sprout forth throughout {{floors}}.",
+  "mining.prediction.MonsterInfested": "> Hordes of beasts will reign over {{floors}}.",
+  "mining.prediction.SlimeInfested": "> Oozing masses of slime will infest {{floors}}.",
+  "mining.prediction.Quarry": "> Into copper and iron will be transmuted {{floors}}.",
+  "mining.prediction.QuarryInfested": "> Swarms of flying skulls will haunt {{floors}}.",
+  "mining.prediction.Treasure": "> Unclaimed treasure will lie on {{floors}}.",
+  "mining.prediction.PepperRex": "> Beneath the shifting sands, ancient reptiles may roam {{floors}}.",
+  "mining.closing.progress": "You have not yet reached the end of your^subterranean quest, apprentice. More surprises await you in the murky depths.",
+  
   "geodes.opening": "The spirits of the crystal spires accept your stony offering.",
   "geodes.type.question": "Which strange rocks do you wish to peek inside?",
   "geodes.type.any": "Next three geodes of any type",
