--- a/ScryingOrb/i18n/default.json
+++ b/ScryingOrb/i18n/default.json
@@ -1,4 +1,6 @@
 ﻿{
+  "welwickLetter": "Salutations, young one.^^My colleague Rasmodius has spoken highly of your perception and intuition. I sense that you are ready to begin your own training in divination.^^Enclosed please find instructions for forging and enchanting a basic Scrying Orb. By making meaningful offerings to this conduit, you can query the voice of the spirits on sundry topics.^^I wish you the best of luck in your endeavors.^^   -Welwick, Diviner%item craftingRecipe Scrying_Orb %%[#]Welwick's Instructions",
+
   "datePicker.prevLabel": "Previous Day",
   "datePicker.nextLabel": "Next Day",
   "datePicker.scryLabel": "Scry This Day",
