--- a/PublicAccessTV/i18n/default.json
+++ b/PublicAccessTV/i18n/default.json
@@ -18,6 +18,8 @@
   "garbage.closing.standard": "I'll be back tomorrow with another look In the Cans. Let's keep this between you and me, okay?",
   "garbage.closing.progress": "This is only what you're ready to find, young friend. Learn to listen to the cans and they'll have more to offer you. Go in peace.",
 
+  "mining.letter.title": "Marlon's Broadcast",
+  "mining.letter.content": "@,^^Starting today, you'll be able to tune in to Gil and me on the public access channel. Our \"Mining Advisory\" will tip you off on good finds and warn you what floors to avoid. Be sure to give it a look.^^   -Marlon",
   "mining.title": "Mining Advisory",
   "mining.opening": "Hey, adventurers. Gil and I have some news on what's in the mines today.",
   "mining.floor": "floor {{num}}",
@@ -56,6 +58,20 @@
 
   "tailoring.title": "Fashion Showcase",
 
+  "trains.event.demetrius01": "Hi, @! I'm glad to run into you up here. I'm dismantling my photography setup. One moment...",
+  "trains.event.demetrius02": "You just missed a vintage locomotive on its way to an exhibition in Chestervale. The livery was spectacular.",
+  "trains.event.demetrius03": "I've noticed you visiting the tracks when trains have passed through before. Perhaps you're a fellow railfan?",
+  "trains.event.demetrius04": "I've loved trains since I was a young boy. I used to do lots of trainspotting when I lived in the city for grad school, but there aren't as many trains here in the valley.",
+  "trains.event.demetrius05": "So I'm pondering an idea: I could start a public access program to keep everyone updated on rail activity in the area!",
+  "trains.event.demetrius06": "Do you think it's worth a try?",
+  "trains.event.farmer01": "Yes! I'd love to know more about trains.",
+  "trains.event.demetrius07a": "I'm so glad to hear that! You know, I think I'll get started tomorrow. There's no time like the present, after all.",
+  "trains.event.farmer02": "Sure, I guess. I might tune in occasionally.",
+  "trains.event.demetrius07b": "Hmm. I suppose I can give it a try and see how people respond to it. A pilot episode tomorrow would be a good experiment.",
+  "trains.event.farmer03": "How boring. Who would watch something like that?",
+  "trains.event.demetrius07c": "Oh. Well, hey, some of us really like trains. I suppose I could start a newsletter instead.",
+  "trains.event.demetrius08": "Anyway, I've taken up enough of your time, @. I'm sure you need to get back to your crops.",
+  "trains.event.demetrius09": "Don't forget to watch my first episode tomorrow!",
   "trains.title": "Train Timetable",
   "trains.opening": "Greetings, neighbors! Demetrius here to keep you apprised of the happenings up at the railroad.",
   "trains.next.today": "There's a train coming today! Grab your cameras and head north, railfans. The train will be here at {{time}}.",
