ScryingOrb: Add support for Garbage Hats 🗑🎩
* PC/Garbage.cs:
  - FindGarbageHat: Add method

* SO/Experiences/GarbageExperience.cs:
  - DoRun: Show list of modes (today/later/hat)
  - DoRun: Build prediction list here, including for Garbage Hat
  - ShowPredictions: Rename from OnDateChosen
  - ShowPredictions: Take prediction list as arg instead of calculating
  - ShowPredictions: Take mode as arg for none headers
  - ShowPredictions: Use special name for Garbage Hat
  - ShowPredictions: Add padding line

* SO/i18n/default.json:
  - garbage.mode.*: Add strings for garbage mode menu
  - garbage.none.hat: Add header for failure to find Garbage Hat
  - garbage.item.dishOfTheDay: Rename from garbage.dishOfTheDay
  - garbage.item.hat: Add special name for Garbage Hat

--- a/ScryingOrb/i18n/default.json
+++ b/ScryingOrb/i18n/default.json
@@ -79,12 +79,19 @@
   "nightEvents.closing": "Know that the beings of shadow are capricious.^No occurrence can be foreseen with certainty.",
 
   "garbage.opening": "The spirits of the desolate wastes accept your foul offering.",
+  "garbage.mode.question": "How do you wish to peruse the detritus?",
+  "garbage.mode.today": "Trash for today",
+  "garbage.mode.later": "Refuse in the future",
+  "garbage.mode.hat": "Next appearance of a Garbage Hat",
+  "garbage.mode.leave": "(Leave the waste untouched)",
   "garbage.date.question": "What day's refuse do you wish to foretell?",
   "garbage.none.today": "No garbage reveals itself today.",
   "garbage.none.later": "The cans are portented to be empty on {{date}}.",
+  "garbage.none.hat": "The spirits do not see a Garbage Hat in your future.",
   "garbage.header.today": "On this day:",
   "garbage.header.later": "On the day the mortals shall know as {{date}}:",
-  "garbage.dishOfTheDay": "a hot meal",
+  "garbage.item.dishOfTheDay": "a hot meal",
+  "garbage.item.hat": "a can's lid",
   "garbage.prediction.SamHouse": "> A young family will no longer need {{itemName}}.",
   "garbage.prediction.HaleyHouse": "> Two sisters will throw away {{itemName}}.",
   "garbage.prediction.ManorHouse": "> A longtime leader will dispense with {{itemName}}.",
