--- a/ScryingOrb/i18n/default.json
+++ b/ScryingOrb/i18n/default.json
@@ -1,4 +1,9 @@
 ﻿{
+  "//Note to Translators": "Your contribution is welcome! I would prefer to publish translations as part of the main mod to keep everything up to date. Please see README.md for how to prepare the translation and send me your work.",
+
+  "scryingOrb.displayName": "Scrying Orb",
+  "scryingOrb.description": "Make an appropriate offering to predict the future.",
+
   "welwickLetter.title": "Welwick's Instructions",
   "welwickLetter.content": "Salutations, young one.^^My colleague Rasmodius has spoken highly of your perception and intuition. I sense that you are ready to begin your own training in divination.^^Enclosed please find instructions for forging and enchanting a basic Scrying Orb. By making meaningful offerings to this conduit, you can query the voice of the spirits on sundry topics.^^I wish you the best of luck in your endeavors.^^   -Welwick, Diviner",
 
@@ -101,6 +106,8 @@
   "garbage.prediction.JoshHouse": "> The elders of the town will lay aside {{itemName}}.",
   "garbage.prediction.JojaMart": "> A corporate behemoth will dump {{itemName}}.",
   "garbage.prediction.MovieTheater": "> A house of illusions will scrap {{itemName}}.",
+  "garbage.prediction.AdventureGuild": "> A hall of heroes will dump {{itemName}}.",
+  "garbage.prediction.JenkinsHouse": "> A grandiose mansion will scrap {{itemName}}.",
   "garbage.closing.progress": "You have not yet probed through much waste,^young one. Should you gain more experience^by then, you may well find more in the cans.",
 
   "fallback.message": "The spirits do not recognize your strange offering."
