ScryingOrb: Require more trash for GarbageExperience
* SO/Experiences/GarbageExperience.cs:
  - Require stack of 3 instead of 1 trash-category items
  - Allow a total of 3 combined across multiple trash stacks

* SO/Experiences/GarbageExperience.cs:
* SO/Experiences/MiningExperience.cs:
* SO/Experiences/NightEventsExperience.cs:
  - Show specific rejection for insufficient offering stack

* SO/Experiences/GarbageExperience.cs:
* SO/Experiences/FallbackExperience.cs:
* SO/Experiences/GeodesExperience.cs:
* SO/Experiences/LuckyPurpleExperience.cs:
* SO/Experiences/MetaExperience.cs:
* SO/Experiences/MiningExperience.cs:
* SO/Experiences/NightEventsExperience.cs:
* SO/Experiences/NothingExperience.cs:
* SO/Experiences/UnlimitedExperience.cs:
  - Update for change to Try signature
  - Update for message renames and ShowRejection method

* SO/Experience.cs:
  - Try: Stop taking offering argument
  - ConsumeOffering: Take offering argument, defaulting to
    the designated Offering
  - ShowRejection: Add helper method

* SO/ModEntry.cs:
  - Stop getting offering and passing it to Experience.Try

* SO/i18n/default.json:
  - rejection.nothing: Rename from nothing.message
  - rejection.unrecognized: Rename from fallback.message
  - rejection.insufficient: Add message

* SO/README.md:
* SO/promo/README.bbcode:
  - Update offerings for "Garbage finds"

* ROADMAP.md:
  - Remove completed item

--- a/ScryingOrb/i18n/default.json
+++ b/ScryingOrb/i18n/default.json
@@ -23,8 +23,6 @@
   "unlimited.experience.itemFinder": "Seek a particular item",
   "unlimited.experience.leave": "(Leave their counsel unheeded)",
 
-  "nothing.message": "The spirits wait patiently for an offering.",
-
   "luckyPurple.initial": "The orb seems to peer back at you reproachfully.^Do not try that again.",
   "luckyPurple.following": "The spirits are not amused.^The orb is not an underwear drawer!^Today will not be your lucky day.",
 
@@ -111,5 +109,7 @@
   "garbage.prediction.JenkinsHouse": "> A grandiose mansion will scrap {{itemName}}.",
   "garbage.closing.progress": "You have not yet probed through much waste,^young one. Should you gain more experience^by then, you may well find more in the cans.",
 
-  "fallback.message": "The spirits do not recognize your strange offering."
+  "rejection.nothing": "The spirits wait patiently for an offering.",
+  "rejection.unrecognized": "The spirits do not recognize your strange offering.",
+  "rejection.insufficient": "The spirits require a more generous offering."
 }
