Multiplayer and mod compatibility
* PC/Garbage.cs:
  - IsAvailable: Detect "Better Garbage Cans" mod

* PC/Trains.cs:
  - IsAvailable: Detect "Better Train Loot" mod

* PATV/README.md:
* PATV/promo/README.bbcode:
* SO/README.md:
* SO/promo/README.bbcode:
  - Document known-incompatible mods

* PATV/README.md:
* PATV/promo/README.bbcode:
  - Document known issue with second page of channel list

* PATV/PublicAccessTV.csproj:
* SO/ScryingOrb.csproj:
  - Specify C# language version 8.0

* SO/Experiences/UnlimitedExperience.cs:
  - Officially limit unlimited period to same day for farmhands

* SO/Experiences/LuckyPurpleExperience.cs:
* SO/Experiences/MetaExperience.cs:
* SO/Experiences/UnlimitedExperience.cs:
  - Persistent: Rename from SaveData and use new helpers

* SO/Experience.cs:
  - LoadData, SaveData: Add helper methods that disable
    persistence for farmhands in multiplayer

* SO/i18n/default.json:
  - unlimited.initial.main: Rename from unlimited.initial
  - unlimited.initial.farmhand: Add alternate for limited period

* SO/README.md:
* SO/promo/README.bbcode:
  - Document limited unlimited period for farmhands

* ROADMAP.md:
  - Remove completed testing items
  - Move PyTK issue to 1.1.0
  - Add multiplayer messaging item

--- a/ScryingOrb/i18n/default.json
+++ b/ScryingOrb/i18n/default.json
@@ -11,7 +11,8 @@
   "datePicker.nextLabel": "Next Day",
   "datePicker.scryLabel": "Scry This Day",
 
-  "unlimited.initial": "The spirits are most pleased by your generous offering. You may seek their counsel as much as you desire for the next week.",
+  "unlimited.initial.main": "The spirits are most pleased by your generous offering. You may seek their counsel as much as you desire for the next week.",
+  "unlimited.initial.farmhand": "The spirits are most pleased by your generous offering. You may seek their counsel as much as you desire for the rest of the day.",
   "unlimited.following": "The orb glows bright with the power of your earlier offering.",
   "unlimited.lastDay": "The orb glows faintly as your earlier offering wanes.",
   "unlimited.experience.question": "What wisdom do you seek from the spirits?",
