--- a/ScryingOrb/i18n/default.json
+++ b/ScryingOrb/i18n/default.json
@@ -27,6 +27,7 @@
   "luckyPurple.initial": "The orb seems to peer back at you reproachfully.^Do not try that again.",
   "luckyPurple.following": "The spirits are not amused.^The orb is not an underwear drawer!^Today will not be your lucky day.",
 
+  "//Note on meta.initial": "Sorry about this next line. It's a joke referencing an English meme about putting something on itself. It is shown when you try to give one Scrying Orb to another Scrying Orb. A simpler form to translate would be: You're giving the Scrying Orb another Scrying Orb? The spirits think you must really like scrying!",
   "meta.initial": "The spirits heard you like scrying, so they'll let you put a Scrying Orb on your Scrying Orb so you can scry while you scry.",
   "meta.following": "Nothing happens, but you feel a strange sense of looking in on yourself from the outside.",
 
@@ -63,6 +64,7 @@
   "geodes.header.Magma": "If they be Magma Geodes, the next 10 geodes^rived promise to reveal:^",
   "geodes.header.Omni": "If they be Omni Geodes, the next 10 geodes^split are sure to offer:^",
   "geodes.header.Trove": "If they be Artifact Troves, the next 10 geodes^shattered shall manifest:^",
+  "// Note on geodes.footer": "The $ and = symbols in the next line are turned into coin and star icons by the game. Treat them as adjectives modifying the word 'treasures'.",
   "geodes.footer": "^^$ treasures are deemed more valuable by mortals.^= treasures are sought by another in your village.",
   "geodes.closing.progress": "Your journey to the depths of the mines is^incomplete, child. Should you explore further,^these rocks may reveal different, greater treasures.",
 
