PATV: Add French translation by Inu'tile

--- a/PublicAccessTV/i18n/default.json
+++ b/PublicAccessTV/i18n/default.json
@@ -69,7 +69,9 @@
   "nightEvents.Meteorite.reaction": "We urge you to remain indoors all night. The view can be enjoyed from your windows. Please report any meteorite impacts to your local authorities.",
   "nightEvents.Meteorite.closing": "I wish you all a safe and enjoyable evening.",
   "nightEvents.StrangeCapsule.opening": "Fellow citizens, rumors have been circulating about extraterrestrial activity in the skies over our region tonight.",
+  "//Note on nightEvents.StrangeCapsule.reaction": "The next line is a joke about the Governor supposedly being an alien himself. During the line, he turns green and the background becomes distorted. The last sentence is meant to suggest that he has accidentally started talking about alien larvae being bred on Earth.",
   "nightEvents.StrangeCapsule.reaction": "I can assure you that this is nonsense. Aliens do not exist. They are not already among us. Everything is fine. THE OFFSPRING ARE WELL.",
+  "//Note on nightEvents.StrangeCapsule.closing": "For this line, the Governor and the background return to normal. The word 'human' here is a joke because he obviously isn't human.",
   "nightEvents.StrangeCapsule.closing": "*ahem* I wish you all a normal and human evening.",
   "nightEvents.NewYear.opening": "Fellow citizens, we have come to the end of another successful year for our region and the entire Ferngill Republic.",
   "nightEvents.NewYear.reaction": "Congratulations to our industries on their ever-improving production, particularly the excellent crops from Stardew Valley.",
